// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressRow should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxheI kPnUtS group"
        data-testid="TableRow"
      >
        <td
          class="w-1"
        >
          <div
            class="sc-AxgMl CJDGv"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                data-testid="address__wallet-name"
              >
                ARK Wallet 1
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B1d6…VBMs6YUYD
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB justify-center text-sm font-bold"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <span
                class="text-theme-neutral-600"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </span>
              <span
                class="text-theme-neutral-600"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </span>
              <span
                class="text-theme-warning-400"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-end font-bold text-theme-neutral-dark"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="sc-AxgMl jMsVEB justify-end"
          >
            <div
              class="mr-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB font-bold"
          >
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center font-bold text-theme-neutral-dark"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          >
            <div
              class="sc-AxhCb fxrKLH text-xl text-theme-primary"
              data-testid="AddressRow__profile"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          >
            <div
              class="sc-AxhCb fxrKLH text-theme-success"
              data-testid="AddressRow__status"
              height="1em"
              width="1em"
            >
              <svg>
                ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl hkmjkT justify-end"
          >
            <button
              class="sc-AxirZ dXpJau"
              color="primary"
              data-testid="AddressRow__select-0"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxheI kPnUtS group"
        data-testid="TableRow"
      >
        <td
          class="w-1"
        >
          <div
            class="sc-AxgMl CJDGv"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                data-testid="address__wallet-name"
              >
                ARK Wallet 1
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B1d6…VBMs6YUYD
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB justify-center text-sm font-bold"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <span
                class="text-theme-neutral-600"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </span>
              <span
                class="text-theme-neutral-600"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </span>
              <span
                class="text-theme-warning-400"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-end font-bold text-theme-neutral-dark"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="sc-AxgMl jMsVEB justify-end"
          >
            <div
              class="mr-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB font-bold"
          >
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center font-bold text-theme-neutral-dark"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          >
            <div
              class="sc-AxhCb fxrKLH text-xl text-theme-primary"
              data-testid="AddressRow__profile"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          >
            <div
              class="sc-AxhCb fxrKLH text-theme-success"
              data-testid="AddressRow__status"
              height="1em"
              width="1em"
            >
              <svg>
                ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl hkmjkT justify-end"
          >
            <button
              class="sc-AxirZ dXpJau"
              color="primary"
              data-testid="AddressRow__select-0"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should render when wallet hasn't voted 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxheI kPnUtS group"
        data-testid="TableRow"
      >
        <td
          class="w-1"
        >
          <div
            class="sc-AxgMl CJDGv"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                data-testid="address__wallet-name"
              >
                ARK Wallet 1
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B1d6…VBMs6YUYD
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB justify-center text-sm font-bold"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <span
                class="text-theme-neutral-600"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </span>
              <span
                class="text-theme-neutral-600"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </span>
              <span
                class="text-theme-warning-400"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-end font-bold text-theme-neutral-dark"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="sc-AxgMl jMsVEB justify-end"
          >
            <div
              class="mr-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB font-bold"
          >
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center font-bold text-theme-neutral-dark"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          >
            <div
              class="sc-AxhCb fxrKLH text-xl text-theme-primary"
              data-testid="AddressRow__profile"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          >
            <div
              class="sc-AxhCb fxrKLH text-theme-success"
              data-testid="AddressRow__status"
              height="1em"
              width="1em"
            >
              <svg>
                ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl hkmjkT justify-end"
          >
            <button
              class="sc-AxirZ dXpJau"
              color="primary"
              data-testid="AddressRow__select-0"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="sc-AxheI kPnUtS group"
        data-testid="TableRow"
      >
        <td
          class="w-1"
        >
          <div
            class="sc-AxgMl CJDGv"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="DHijNjwnQWmTgQMGJoHub7CutwomG1J7vs"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"70\\" cy=\\"60\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
                  title="DHijNjwnQWmTgQMGJoHub7CutwomG1J7vs"
                />
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                DHijNjwnQ…womG1J7vs
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB justify-center text-sm font-bold"
          >
            <div
              class="inline-flex items-center space-x-2"
            />
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-end font-bold text-theme-neutral-dark"
          >
            <span
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="sc-AxgMl jMsVEB justify-end"
          >
            <div
              class="mr-4"
            >
              <div
                class="sc-AxiKw dAMydl border-theme-neutral-300"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB font-bold"
          >
            <span
              class="text-theme-neutral-light"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center font-bold text-theme-neutral-dark"
          />
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          />
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          />
        </td>
        <td>
          <div
            class="sc-AxgMl hkmjkT justify-end"
          >
            <button
              class="sc-AxirZ dXpJau"
              color="primary"
              data-testid="AddressRow__select-1"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should render when wallet not found for votes 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxheI kPnUtS group"
        data-testid="TableRow"
      >
        <td
          class="w-1"
        >
          <div
            class="sc-AxgMl CJDGv"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                data-testid="address__wallet-name"
              >
                ARK Wallet 1
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-light font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B1d6…VBMs6YUYD
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB justify-center text-sm font-bold"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <span
                class="text-theme-neutral-600"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </span>
              <span
                class="text-theme-neutral-600"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </span>
              <span
                class="text-theme-warning-400"
              >
                <div
                  class="sc-AxhCb kAKLDr"
                  height="16"
                  width="16"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-end font-bold text-theme-neutral-dark"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="sc-AxgMl jMsVEB justify-end"
          >
            <div
              class="mr-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB font-bold"
          >
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center font-bold text-theme-neutral-dark"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          >
            <div
              class="sc-AxhCb fxrKLH text-xl text-theme-primary"
              data-testid="AddressRow__profile"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          >
            <div
              class="sc-AxhCb fxrKLH text-theme-success"
              data-testid="AddressRow__status"
              height="1em"
              width="1em"
            >
              <svg>
                ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl hkmjkT justify-end"
          >
            <button
              class="sc-AxirZ dXpJau"
              color="primary"
              data-testid="AddressRow__select-0"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="sc-AxheI kPnUtS group"
        data-testid="TableRow"
      >
        <td
          class="w-1"
        >
          <div
            class="sc-AxgMl CJDGv"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="DTLomV8hpJheFDPnBGB5EtrDCfDZJnG23z"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(205, 220, 57)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"100\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="DTLomV8hpJheFDPnBGB5EtrDCfDZJnG23z"
                />
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                DTLomV8hp…fDZJnG23z
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-20"
        >
          <div
            class="sc-AxgMl jMsVEB justify-center text-sm font-bold"
          >
            <div
              class="inline-flex items-center space-x-2"
            />
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-end font-bold text-theme-neutral-dark"
          >
            <span
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
        </td>
        <td
          class="w-24"
        >
          <div
            class="sc-AxgMl jMsVEB justify-end"
          >
            <div
              class="mr-4"
            >
              <div
                class="sc-AxiKw dAMydl border-theme-neutral-300"
              />
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB font-bold"
          >
            <span
              class="text-theme-neutral-light"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center font-bold text-theme-neutral-dark"
          />
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          />
        </td>
        <td>
          <div
            class="sc-AxgMl jMsVEB justify-center"
          />
        </td>
        <td>
          <div
            class="sc-AxgMl hkmjkT justify-end"
          >
            <button
              class="sc-AxirZ dXpJau"
              color="primary"
              data-testid="AddressRow__select-1"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
